@@ -1858,6 +1858,10 @@
 	tries entering when another party is still inside.
 	* Temporary implementation for portal blocking in Kerning PQ.
 
+2012-08-10  GoldenKevin  (revision 115)
+
+	* Added NPCs for John's jump quests and Chrishrama in Sleepywood.
+
 Copyright 2011-2012 GoldenKevin
 Copying and distribution of this file, with or without modification, are
 permitted provided the copyright notice and this notice are preserved.
